# ai-agents-app

./: .gitignore  README.md  agents_app.py  analysis_system.py  docker-compose.yaml  interactive_agent.py  main.py  pyproject.toml
.github/workflows/: build-and-push-python.yaml  build-and-push-python.yml  deploy.yaml  deploy.yml  learn.yaml  run-python-tests.yaml
app/: agents_app.py  init_models.py  main.py  state.py  tools.py  utils.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx  api.ts  main.tsx
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  CopyButton.tsx  Shell.tsx
frontend/src/pages/: AgentsPage.tsx  ChatPage.tsx
frontend/src/types/: agents.ts
personal_assistant/: app.py  calendar.py  email.py  supervisor.py  tools.py
tests/: test_sample.py
